--- a/src/main/resources/templates/backend/ticketInput.html
+++ b/src/main/resources/templates/backend/ticketInput.html
@@ -130,7 +130,7 @@
 						<div class="row">
 							<div class="col-md-6">
 							  <div class="form-group row">
-								<label class="col-sm-3 col-form-label" for="locationId">地區</label>
+								<label class="col-sm-3 col-form-label" for="locationId">鄉鎮區</label>
 								<div class="col-sm-9">
 								<!-- <input type="hidden" class="js-demeter-tw-zipcode-selector" data-city="#city" data-dist="#location"  size="6" id="yoyo" name="yoyo" readonly/>  -->
 								<select id="dist" name="location"  placeholder=" " class="form-control" th:field="*{location}" data-dist="#dist"></select>
@@ -153,12 +153,12 @@
 							  <div class="form-group row">
 								<label class="col-sm-3 col-form-label" for="tagNoId">標籤編號</label>
 								<div class="col-sm-9">
-								  <select id="sel" type="text" class="form-control"  th:field="*{tagNo}">
+								  <select id="sel2" type="text" class="form-control"  th:field="*{tagNo}" readonly> 
 									<option value="0">請選擇</option>
-									  <option value="1">1</option>
+									  <!-- <option value="1">1</option>
 									  <option value="2">2</option>
 									  <option value="3">3</option>
-									  <option value="4">4</option>
+									  <option value="4">4</option> -->
 								  </select>
 								</div>
 							  </div>
@@ -167,7 +167,13 @@
 							  <div class="form-group row">
 								<label class="col-sm-3 col-form-label" for="tagNameId">標籤名稱</label>
 								<div class="col-sm-9">
-								  <select id="sel2" type="text" class="form-control" name="tagName" th:field="*{tagName}" readonly></select>
+								  <select id="sel" type="text" class="form-control" name="tagName" th:field="*{tagName}">
+									  <option value="0">請選擇</option>
+									  <option value="1">主題樂園</option>
+									  <option value="2">博物館&美術館</option>
+									  <option value="3">水族館&動物園</option>
+									  <option value="4">歷史景點</option>
+								  </select>
 								</div>
 							  </div>
 							</div>
@@ -209,42 +215,78 @@
 							  <label class="col-sm-3 col-form-label" for="statusId">狀態</label>
 							  <div class="col-sm-9">
 								<select id="status" type="text" class="form-control" name="status" th:field="*{status}" readonly>
-									<!-- <option value="請選擇">請選擇</option> -->
-									  <option value="已上架">上架中</option>
-									  <!-- <option value="已下架">已下架</option> -->
+									<option value="上架中">上架中</option>
+									<option value="已上架">已下架</option>
 								</select>
 							  </div>
 							</div>
 						  </div>
 						</div>
+
+						<!-- 照片 -->
+						<div class="row mt-4">
+							<div class="col-md-6">
+								<div class="form-group row">
+									<label class="col-sm-3 col-form-label" for="images">上傳照片</label>
+									<div class="col-sm-9">
+										<input id="imagefiles" type="file" class="form-control custom-file-input pb-1" name="imagefiles" multiple/>
+										<label class="custom-file-label">選擇檔案</label>
+										<!-- <input id="nameId" type="text" class="form-control" name="ticketName" th:field="*{ticketName}" /> -->
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6">
+								<div class="form-group row">
+									<label class="col-sm-3 col-form-label" for="ticketBriefIntroId">景點簡介</label>
+									<div class="col-sm-9"> 
+									  <!-- <textarea name="ticketIntro"  th:field="*{ticketIntro}" id="descriptionId" ></textarea>  -->
+									<input id="ticketBriefIntroId" type="text" class="form-control" name="ticketBriefIntro" th:field="*{ticketBriefIntro}"/>
+								  </div>
+								</div>
+							</div>
+						</div>
+
+						<!-- 景點簡介 -->
+						<!-- <div class="col-md-6">
+							<div class="form-group row">
+							  <label class="col-sm-3 col-form-label" for="ticketIntroId">商品簡介</label>
+							  <div class="col-sm-9">
+								<input id="ticketIntroId" type="text" class="form-control" name="ticketIntro" th:field="*{ticketIntro}"/>
+							  </div>
+							</div>
+						</div> -->
+
+						<!-- 圖片上傳 -->
+						<!-- <div class="row mt-4">
+								<div class="col-md-6">
+								  <div class="form-group row">
+									<label for="images" class="col-sm-3 col-form-label">上傳照片</label>
+									<div class="col-sm-1">
+										<div id="images-length" class="text-black-50 small">(0/3)</div>
+									</div>
+								<div class="col-md-9">
+									<div class="form-group row">
+										<input id="image" type="file" class="col-form-label" name="image" />
+										<input type="file" class="form-control custom-file-input pb-1"	name="imagefiles" id="imagefiles" multiple>
+										<div class="invalid-feedback">最多選取3張圖片</div>
+										<label class="custom-file-label">選擇檔案</label>
+									</div>
+								</div>
+							</div> -->
+
+
 						<!-- 簡介 -->
 						<div class="col-md-9">
 							<div class="form-group row">
-								<label class="col-sm-3 col-form-label" for="descriptionId">景點套票簡介</label>
+								<label class="col-sm-3 col-form-label" for="descriptionId">景點商品說明</label>
 								<div class="col-sm-9">
-									<textarea name="ticketIntro"  th:field="*{ticketIntro}" id="descriptionId"></textarea>
+									<textarea name="ticketIntro" th:field="*{ticketIntro}" id="descriptionId" ></textarea>
 									<!-- <textarea class="sr" type="text" name="ticketIntro" id="descriptionId" style="white-space: normal" onkeyUp="textLimitCheck(this, 300);" th:field="*{ticketIntro}"></textarea>
 										<div class="col-sm-15" style="width: 110%;">
 										<font color=#666666>限 300 個字，已輸入 <font color="#CC0000"><span id="messageCount">0</span></font> 個字</font> -->
 									<!-- </div> -->
 								</div>
 							</div>
-						</div>
-
-						<!-- 照片 -->
-						<div class="form-group row mt-2 justify-content-end">
-						<div class="col-sm-3">
-							<label for="images" class="col-form-label pb-1">上傳照片</label>
-							<div id="images-length" class="text-black-50 small">(0/3)</div>
-						</div>
-						<div class="col-sm-4.5">
-							<div class="custom-file">
-								<!-- <input id="image" type="file" class="col-form-label" name="image" /> -->
-								<input type="file" class="form-control custom-file-input pb-1"	name="imagefiles" id="imagefiles" multiple>
-								<div class="invalid-feedback">最多選取3張圖片</div>
-								<label class="custom-file-label">選擇檔案</label>
-							</div>
-						</div>
 						</div>
 
 						<!-- 返回、提交、一鍵輸入、一鍵錯誤按鈕 -->
@@ -308,6 +350,7 @@
 
 <!-- ckeditor -->
 <script src="//cdn.ckeditor.com/4.19.0/standard/ckeditor.js"></script>
+<!-- <script src="//cdn.ckeditor.com/4.19.0/full/ckeditor.js"></script> -->
 
 <!-- 判斷城市資料後再自動代入地區 -->
 <script th:inline="javascript">
@@ -344,7 +387,7 @@ $("#sel").change(function () {
 			break;
 		case 1:
 			$("#sel2 option").remove();
-			var array = ["主題樂園"];
+			var array = ["1"];
 			//利用each遍歷array中的值並將每個值新增到Select中
 			$.each(array, function (i, val) {
 				$("#sel2").append($("<option value='" + array[i] + "'>" + array[i] + "</option>"));
@@ -352,7 +395,7 @@ $("#sel").change(function () {
 			break;
 		case 2:
 			$("#sel2 option").remove();
-			var array = ["博物館&美術館"];
+			var array = ["2"];
 			//利用each遍歷array中的值並將每個值新增到Select中
 			$.each(array, function (i, val) {
 				$("#sel2").append($("<option value='" + array[i] + "'>" + array[i] + "</option>"));
@@ -360,7 +403,7 @@ $("#sel").change(function () {
 			break;
 		case 3:
 			$("#sel2 option").remove();
-			var array = ["水族館&動物園"];
+			var array = ["3"];
 			//利用each遍歷array中的值並將每個值新增到Select中
 			$.each(array, function (i, val) {
 				$("#sel2").append($("<option value='" + array[i] + "'>" + array[i] + "</option>"));
@@ -368,7 +411,7 @@ $("#sel").change(function () {
 			break;
 		case 4:
 			$("#sel2 option").remove();
-			var array = ["歷史景點"];
+			var array = ["4"];
 			//利用each遍歷array中的值並將每個值新增到Select中
 			$.each(array, function (i, val) {
 				$("#sel2").append($("<option value='" + array[i] + "'>" + array[i] + "</option>"));
@@ -517,7 +560,7 @@ $("#sel").change(function () {
 $('#correctInput').click(function () {
     //對應ID值，不是NAME值
     $('#nameId').val('阿里山國家森林遊樂區門票')
- 	$('#descriptionId').val('阿里山山脈為台灣五大山脈之一，阿里山並不是一座山，而是泛指這個山區；自古擁有豐沛的紅檜與扁柏，然從 191 2年起成為台灣最具規模的林場，一直到 1960 年代末期為止。歷經日本、國民政府的採伐後，原始檜木林幾乎伐盡，現今存有第一期與第二期巨木群棧道近四十株的紅檜巨木，讓人緬懷過去神木林的壯闊神聖。其中最高的「阿里山香林神木」，高 45 公尺，樹圍 12.3 公尺，樹齡約2300年，是到訪阿里山的必遊之處。在阿里山國家森林遊樂區內有豐富的生態，其中最特殊的植物，莫過於稀有的蓧蕨、相馬氏石杉、阿里山十大功勞與一葉蘭了；動物則有台灣獼猴、帝雉、藪鳥、阿里山鴝、阿里山山椒魚等小明星助陣，熱鬧非凡。除了神木，阿里山還有非常多具可看性的景點：森林小火車、空靈飄渺的姊妹潭、壯闊動人的雲海、美麗的祝山日出、受鎮宮、百年慈雲寺、林業史蹟、春天盛開的各類櫻花與杜鵑…阿里山森林遊樂區是一個足以代表台灣霧林帶的國際級觀光景點，歡迎著來自全世界的旅人們，前來認識台灣山林豐富而美麗的面貌。「春賞花、夏避暑、秋攬楓、冬觀雲」詳述了一年四季萬種風情的阿里山國家森林遊樂區。在阿里山您只須放慢腳步，享受舒適宜人的綿延群山，伴蟲鳴入眠、被林間輕脆鳥啼喚醒，不妨現在就背起行李，規劃一趟阿里山輕旅行，讓自己徜徉於神木群的芬多精中，為身心靈安排一趟大自然的洗禮吧。')
+ 	$('#descriptionId').val('阿里山山脈為台灣五大山脈之一，阿里山並不是一座山，而是泛指這個山區；自古擁有豐沛的紅檜與扁柏，然從 1912年起成為台灣最具規模的林場，一直到 1960 年代末期為止。歷經日本、國民政府的採伐後，原始檜木林幾乎伐盡，現今存有第一期與第二期巨木群棧道近四十株的紅檜巨木，讓人緬懷過去神木林的壯闊神聖。其中最高的「阿里山香林神木」，高 45 公尺，樹圍 12.3 公尺，樹齡約2300年，是到訪阿里山的必遊之處。在阿里山國家森林遊樂區內有豐富的生態，其中最特殊的植物，莫過於稀有的蓧蕨、相馬氏石杉、阿里山十大功勞與一葉蘭了；動物則有台灣獼猴、帝雉、藪鳥、阿里山鴝、阿里山山椒魚等小明星助陣，熱鬧非凡。除了神木，阿里山還有非常多具可看性的景點：森林小火車、空靈飄渺的姊妹潭、壯闊動人的雲海、美麗的祝山日出、受鎮宮、百年慈雲寺、林業史蹟、春天盛開的各類櫻花與杜鵑…阿里山森林遊樂區是一個足以代表台灣霧林帶的國際級觀光景點，歡迎著來自全世界的旅人們，前來認識台灣山林豐富而美麗的面貌。「春賞花、夏避暑、秋攬楓、冬觀雲」詳述了一年四季萬種風情的阿里山國家森林遊樂區。在阿里山您只須放慢腳步，享受舒適宜人的綿延群山，伴蟲鳴入眠、被林間輕脆鳥啼喚醒，不妨現在就背起行李，規劃一趟阿里山輕旅行，讓自己徜徉於神木群的芬多精中，為身心靈安排一趟大自然的洗禮吧。')
     $('#picker1').val('8:30 AM')
     $('#picker2').val('5:30 PM')
     $('#phoneId').val('052679917')
@@ -556,8 +599,52 @@ $('#wrongInput').click(function () {
 })
 </script>
 
+<!-- CKEDITOR -->
 <script>CKEDITOR.replace('ticketIntro');</script>
 
 </body>
 
 </html>
+
+
+<!-- <script>
+	$("#sel").change(function () {
+		switch (parseInt($(this).val())) {
+			case 0:
+				$("#sel2 option").remove();
+				break;
+			case 1:
+				$("#sel2 option").remove();
+				var array = ["主題樂園"];
+				//利用each遍歷array中的值並將每個值新增到Select中
+				$.each(array, function (i, val) {
+					$("#sel2").append($("<option value='" + array[i] + "'>" + array[i] + "</option>"));
+				});
+				break;
+			case 2:
+				$("#sel2 option").remove();
+				var array = ["博物館&美術館"];
+				//利用each遍歷array中的值並將每個值新增到Select中
+				$.each(array, function (i, val) {
+					$("#sel2").append($("<option value='" + array[i] + "'>" + array[i] + "</option>"));
+				});
+				break;
+			case 3:
+				$("#sel2 option").remove();
+				var array = ["水族館&動物園"];
+				//利用each遍歷array中的值並將每個值新增到Select中
+				$.each(array, function (i, val) {
+					$("#sel2").append($("<option value='" + array[i] + "'>" + array[i] + "</option>"));
+				});
+				break;
+			case 4:
+				$("#sel2 option").remove();
+				var array = ["歷史景點"];
+				//利用each遍歷array中的值並將每個值新增到Select中
+				$.each(array, function (i, val) {
+					$("#sel2").append($("<option value='" + array[i] + "'>" + array[i] + "</option>"));
+				});
+				break;
+		}
+	});
+	</script> -->
