--- a/src/main/resources/templates/backend/hotel/hotelEditForm.html
+++ b/src/main/resources/templates/backend/hotel/hotelEditForm.html
@@ -9,15 +9,16 @@
     <script src="https://demeter.5fpro.com/tw/zipcode-selector.js"></script>
     <!-- 本頁面使用css樣式 Plugin css for this page -->
     <link rel="stylesheet" th:href="@{/vendors/datatables.net-bs4/dataTables.bootstrap4.css}"
-          href="vendors/datatables.net-bs4/dataTables.bootstrap4.css">
+          href="../../../static/vendors/datatables.net-bs4/dataTables.bootstrap4.css">
     <link rel="stylesheet" th:href="@{/js/select.dataTables.min.css}"
           href="vendors/datatables.net-bs4/select.dataTables.min.css">
     <!-- 通用css樣式 plugins:css -->
-    <link rel="stylesheet" th:href="@{/css/vertical-layout-light/style.css}" href="css/vertical-layout-light/style.css">
+    <link rel="stylesheet" th:href="@{/css/vertical-layout-light/style.css}"
+          href="../../../static/css/vertical-layout-light/style.css">
     <link rel="stylesheet" th:href="@{/vendors/ti-icons/css/themify-icons.css}"
-          href="vendors/ti-icons/css/themify-icons.css">
-    <link rel="stylesheet" th:href="@{/vendors/feather/feather.css}" href="vendors/feather/feather.css">
-    <link rel="shortcut icon" href="images/favicon.png"/>
+          href="../../../static/vendors/ti-icons/css/themify-icons.css">
+    <link rel="stylesheet" th:href="@{/vendors/feather/feather.css}" href="../../../static/vendors/feather/feather.css">
+    <link rel="shortcut icon" href="../../../static/images/favicon.png"/>
     <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css}" rel="stylesheet"
           integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <script th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js}"
@@ -275,19 +276,20 @@
     </div>
 </div>
 
-<script th:src="@{/vendors/js/vendor.bundle.base.js}" src="vendors/js/vendor.bundle.base.js"></script>
+<script th:src="@{/vendors/js/vendor.bundle.base.js}" src="../../../static/vendors/js/vendor.bundle.base.js"></script>
 <script th:src="@{/js/off-canvas.js}" src="vendors/js/off-canvas.js"></script>
-<script th:src="@{/js/hoverable-collapse.js}" src="js/hoverable-collapse.js"></script>
-<script th:src="@{/js/template.js}" src="js/template.js"></script>
-<script th:src="@{/js/settings.js}" src="js/settings.js"></script>
+<script th:src="@{/js/hoverable-collapse.js}" src="../../../static/js/hoverable-collapse.js"></script>
+<script th:src="@{/js/template.js}" src="../../../static/js/template.js"></script>
+<script th:src="@{/js/settings.js}" src="../../../static/js/settings.js"></script>
 
 <script th:src="@{/vendors/datatables.net/jquery.dataTables.js}"
-        src="vendors/datatables.net/jquery.dataTables.js"></script>
+        src="../../../static/vendors/datatables.net/jquery.dataTables.js"></script>
 <script th:src="@{/vendors/datatables.net-bs4/dataTables.bootstrap4.js}"
-        src="vendors/datatables.net-bs4/dataTables.bootstrap4.js"></script>
-<script th:src="@{/js/dataTables.select.min.js}" src="js/dataTables.select.min.js"></script>
-<script th:src="@{/js/dashboard-comment.js}" src="js/dashboard-comment.js"></script>
-<script th:src="@{/vendors/sweetalert/sweetalert2.all.min.js}" src="vendors/sweetalert/sweetalert2.all.min.js"></script>
+        src="../../../static/vendors/datatables.net-bs4/dataTables.bootstrap4.js"></script>
+<script th:src="@{/js/dataTables.select.min.js}" src="../../../static/js/dataTables.select.min.js"></script>
+<script th:src="@{/js/dashboard-comment.js}" src="../../../static/js/dashboard-comment.js"></script>
+<script th:src="@{/vendors/sweetalert/sweetalert2.all.min.js}"
+        src="../../../static/vendors/sweetalert/sweetalert2.all.min.js"></script>
 <script>
     (function ($) {
         $(document).ready(function () {
