--- a/src/main/resources/templates/frontend/car/vendor-loc-form.html
+++ b/src/main/resources/templates/frontend/car/vendor-loc-form.html
@@ -27,20 +27,20 @@
 									</a>
 								</li>
 								<li class="bor18">
-									<a th:href="@{/cars/locations?companyId=1}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 p-lr-4">
+									<a th:href="@{/vendor/cars/locations/1}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 p-lr-4">
 										地點與車款列表
 									</a>
 								</li>
 								<li class="bor18">
-									<a th:href="@{/cars/locations/form}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 p-lr-4">
-										新增地點與車款
+									<a th:href="@{/vendor/cars/locations/form}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 p-lr-4">
+										新增地點
 									</a>
 								</li>
-<!-- 								<li class="bor18"> -->
-<!-- 									<a href="#" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 p-lr-4"> -->
-<!-- 										新增車款 -->
-<!-- 									</a> -->
-<!-- 								</li> -->
+								<li class="bor18">
+									<a th:href="@{/vendor/cars/options/form}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 p-lr-4">
+										新增車款
+									</a>
+								</li>
 							</ul>
 						</div>
 					</div>
@@ -50,7 +50,7 @@
 					<div class="card">
 						<div class="card-body ">
 							<h4 class="card-title font-weight-bold">租車據點</h4>
-							<form id="insertForm" name="form" th:action="@{/cars/locations}" method="post" th:object="${carLocation}"
+							<form id="insertForm" name="form" th:action="@{/vendor/cars/locations}" method="post" th:object="${carLocation}"
 								  class="form-horizontal needs-validation" enctype="multipart/form-data">
 								  
 								<p class="card-description mt-4">據點資料</p>
@@ -79,7 +79,7 @@
 												<select class="form-control district" style="background-color: white" th:field="*{district}"></select>
 											</div>
 											<div class="col-4">
-												<input class="zipcode form-control" type="text" size="3" readonly placeholder="郵遞區號">
+												<input class="zipcode form-control" style="background-color: white" type="text" size="3" readonly placeholder="郵遞區號">
 											</div>
 										</div>
 									</div>
@@ -108,7 +108,7 @@
 									<label class="col-lg-2 col-form-label" for="">營業時間</label>
 									<label class="col-lg-2 col-form-label" for="openTime">開始營業</label>
 									<div class="col-lg-4 mr-5">
-										<input th:field="*{openTime}" id="openTime" type="datetime" class="form-control"/>
+										<input th:value="${#strings.substring(carLocation.openTime,0,5)}" id="openTime" type="text"  name="openTime" class="form-control"/>
 										<div class="invalid-feedback">請輸入營業時間</div>
 									</div>
 								</div>
@@ -116,7 +116,7 @@
 									<div class="col-lg-3"></div>
 									<label class="col-lg-2 col-form-label" for="closeTime">結束營業</label>
 									<div class="col-lg-4">
-										<input th:field="*{closeTime}" id="closeTime" type="text" class="form-control"/>
+										<input th:value="${#strings.substring(carLocation.closeTime,0,5)}" id="closeTime" type="text"  name="closeTime" class="form-control"/>
 										<div class="invalid-feedback">請輸入營業時間</div>
 									</div>
 								</div>
