--- a/src/main/resources/templates/frontend/partials/fragment.html
+++ b/src/main/resources/templates/frontend/partials/fragment.html
@@ -5,6 +5,13 @@
 	<title>GoTrip</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	<script type="text/javascript" src="webjars/jquery/2.2.4/jquery.min.js"></script>
+	<script type="text/javascript" src="webjars/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+	<script type="text/javascript" th:src="@{js/loginJS/main.js}" src="../../../static/js/loginJS/main.js"></script>
+	<link rel="stylesheet" href="webjars/bootstrap/4.3.1/css/bootstrap.min.css"/>
+	
+	
 	<link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css}" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
 	<link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js}" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></link>
 	<link rel="stylesheet" type="text/css" th:href="@{/vendors/bootstrap/css/bootstrap.min.css}" href="vendors/bootstrap/css/bootstrap.min.css">
@@ -23,6 +30,8 @@
 	<link rel="stylesheet" type="text/css" th:href="@{/css/main.css}" href="css/main.css">
 	<link th:href='@{https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css}' rel='stylesheet' />
 	<link rel="icon" type="image/png" th:href="@{/images/favicon.png}" />
+	<link th:href='@{https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css}' rel="stylesheet" />
+ 
 </head>
 
 <body>
@@ -84,12 +93,14 @@
 							data-notify="0">
 							<i class="zmdi zmdi-favorite-outline"></i>
 						</a>
-<!-- 						<a th:href="@{/login}" -->
-						<a th:href="@{/backend/index}"
-							class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
+						<a th:href="@{/backend/index}" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
 							data-notify="0">
-							<i class="zmdi zmdi-account"></i>
-						</a>
+							<i class="zmdi zmdi-account"></i></a>
+<!-- 						<a data-toggle="modal" data-target="#logModal"  -->
+<!-- 						    class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti eBtn" -->
+<!-- 							data-notify="0"> -->
+<!-- 							<i class="zmdi zmdi-account"></i> -->
+<!-- 						</a> -->
 					</div>
 				</nav>
 			</div>
@@ -103,25 +114,25 @@
 			</div>
 
 			<!-- Icon header -->
-			<div class="wrap-icon-header flex-w flex-r-m m-r-15">
-				<div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 js-show-modal-search">
-					<i class="zmdi zmdi-search"></i>
-				</div>
+<!-- 			<div class="wrap-icon-header flex-w flex-r-m m-r-15"> -->
+<!-- 				<div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 js-show-modal-search"> -->
+<!-- 					<i class="zmdi zmdi-search"></i> -->
+<!-- 				</div> -->
 
-				<div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti js-show-cart"
-					data-notify="2">
-					<i class="zmdi zmdi-shopping-cart"></i>
-				</div>
+<!-- 				<div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti js-show-cart" -->
+<!-- 					data-notify="2"> -->
+<!-- 					<i class="zmdi zmdi-shopping-cart"></i> -->
+<!-- 				</div> -->
 
-				<a href="#" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti"
-					data-notify="0">
-					<i class="zmdi zmdi-favorite-outline"></i>
-				</a>
-				<a th:href="@{/backend/index}" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
-					data-notify="0">
-					<i class="zmdi zmdi-account"></i>
-				</a>
-			</div>
+<!-- 				<a href="#" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti" -->
+<!-- 					data-notify="0"> -->
+<!-- 					<i class="zmdi zmdi-favorite-outline"></i> -->
+<!-- 				</a> -->
+<!-- 				<a th:href="@{/backend/index}" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" -->
+<!-- 					data-notify="0"> -->
+<!-- 					<i class="zmdi zmdi-account"></i> -->
+<!-- 				</a> -->
+<!-- 			</div> -->
 
 			<!-- Button show menu -->
 			<div class="btn-show-menu-mobile hamburger hamburger--squeeze">
@@ -268,8 +279,7 @@
 			</div>
 		</div>
 	</div>
-	
-	
+		
 	<div th:fragment="search" class="dis-none panel-search w-full p-t-10 p-b-15">
 		<div class="bor8 dis-flex p-l-15">
 			<button class="size-113 flex-c-m fs-16 cl2 hov-cl1 trans-04">
@@ -277,6 +287,53 @@
 			</button>
 			<input class="mtext-107 cl2 size-114 plh2 p-r-15" type="text" name="search-product" placeholder="Search">
 		</div>
+	</div>
+	
+	<!-- login -->
+	<div class="logForm">
+	<div class="modal fade" id="logModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		 <form id=loginForm method="POST" th:action="@{/login}" th:Object="${userAccount}" enctype="multipart/form-data" autocomplete="off">
+		  
+		  <div class="modal-dialog" role="document">
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <h5 class="modal-title" id="exampleModalLabel">會員登入</h5>
+		        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+		          <span aria-hidden="true">&times;</span>
+		        </button>
+		      </div>
+		      <div class="modal-body">
+		          <input type="hidden" id="MESSAGE" th:value="${MESSAGE}"/>
+            <section class="form-input">
+                <label>帳號/Email</label>
+                <div class="input-area">
+                    <div class="input-img"><img th:src="@{/images/userAccount/person.png}"></div>
+                    <input type="text" th:field="*{email}" placeholder="請輸入您的Email"/>
+                </div>
+            </section>
+            <section class="form-input">
+                <label>密碼</label>
+                <div class="input-area">
+                    <div class="input-img"><img th:src="@{/images/userAccount/lock.png}"></div>
+                    <input type="password" th:field="*{password}" maxlength="16" placeholder="請輸入您的密碼"/>
+                </div>
+            </section>
+            
+            <button>登入</button>
+            <span>還不是會員嗎?<a th:href="@{/register}">立即加入</a></span>
+		        
+		      </div>
+		      <div class="modal-footer">
+<!-- 		        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
+<!-- 		        <button type="button" class="btn btn-primary">Send message</button> -->
+		      <button>登入</button>
+              <span>還不是會員嗎?<a th:href="@{/register}">立即加入</a></span>
+		      </div>
+		    </div>
+		  </div>
+		  
+		  </form>
+	</div>
 	</div>
       
       
@@ -786,7 +843,6 @@
 		</div>
 	</div>
 	
-	
 	<div th:fragment="script">
 		<script th:src="@{/vendors/jquery/jquery-3.2.1.min.js}" src="vendors/jquery/jquery-3.2.1.min.js"></script>
 		<script th:src="@{/vendors/animsition/js/animsition.min.js}" src="vendors/animsition/js/animsition.min.js"></script>
@@ -805,7 +861,9 @@
 		<script th:src="@{/js/main.js}" src="js/main.js"></script>
 		<script th:src="@{/js/frontend.js}" src="js/frontend.js"></script>
 		<script th:src="@{/js/rating.js}" src=""></script>
+<!-- 		<script th:src="@{https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js}"></script> -->
 	</div>
 	
 </body>
+
 </html>
