Google map 串接完成  剩餘字串＋變數

--- a/src/main/resources/templates/frontend/hotel-Google.html
+++ b/src/main/resources/templates/frontend/hotel-Google.html
@@ -824,7 +824,7 @@
     </script>
     <script>
         const CONFIGURATION = {
-            "locations": [
+            "LOCATIONS": [
                 {
                     "title": "新北市新莊區光華國民小學",
                     "address1": "242台灣新北市新莊區龍安路452號",
@@ -851,6 +851,7 @@
                 "actions": false
             }
         };
+
 
         function initMap() {
             new LocatorPlus(CONFIGURATION);
@@ -1014,6 +1015,8 @@
     <div id="gmp-map"></div>
 </div>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyADjpRo3888omouCJVj2WHZGNETKhZFMwU&callback=initMap&libraries=places,geometry&solution_channel=GMP_QB_locatorplus_v6_cABCDE"
-        async defer></script>
+        async defer>
+
+</script>
 </body>
 </html>
