--- a/src/main/resources/templates/frontend/hotel-roomDetail.html
+++ b/src/main/resources/templates/frontend/hotel-roomDetail.html
@@ -367,12 +367,20 @@
             </div>
             <div class="col-4">
                 <div class="m-t-10 p-xl-3  border border-1 bg-white rounded">
-                    <h1>這裡放評論</h1>
+                    <h1>Google Map</h1>
+                    <iframe
+                            width="400"
+                            height="250"
+                            frameborder="0"
+                            style="border:0"
+                            herf="https://www.google.com/maps/embed/v1/place?key=AIzaSyADjpRo3888omouCJVj2WHZGNETKhZFMwU&q=101大樓">
+                    </iframe>
                 </div>
             </div>
         </div>
 
-        <div class="row g-1">
+        <div class=" row g-1
+                    ">
             <div class="col-8">
                 <div class="m-t-10 p-xl-3  border border-1 bg-white rounded" id="B">
                     <h4>重點設施</h4>
@@ -920,5 +928,7 @@
     <div th:replace="frontend/partials/fragment :: script"></div>
 
 </tr>
+
+
 </body>
 
