--- a/src/main/resources/templates/frontend/car/car-detail.html
+++ b/src/main/resources/templates/frontend/car/car-detail.html
@@ -11,119 +11,57 @@
 	<div th:replace="frontend/partials/fragment :: cart"></div>
 
 	<!-- breadcrumb -->
-	<div class="container">
+	<div class="container m-t-60">
 		<div class="bread-crumb flex-w p-l-25 p-r-15 p-t-20 p-lr-0-lg">
-			<a href="/index" class="stext-110 cl8 hov-cl1 trans-04">
-				台灣
+			<a th:href="@{/cars/locations}" class="stext-110 cl8 hov-cl1 trans-04">
+				<span th:text="${option.carLocation.country}"></span>
 				<i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
 			</a>
-
-			<a href="/product" class="stext-110 cl8 hov-cl1 trans-04">
-				台北
+			<a th:href="@{/cars/locations}" class="stext-110 cl8 hov-cl1 trans-04">
+				<span th:text="${option.carLocation.county}"></span>
 				<i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
 			</a>
-			<span th:text="${car.makeEn}" class="stext-110 cl4">
-				車款
-			</span>
+			<a th:href="@{/cars/locations}" class="stext-110 cl8 hov-cl1 trans-04">
+				<span th:text="${option.carLocation.district}"></span>
+				<i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
+			</a>
+			<span th:text="${option.carLocation.carCompany.name}" class="stext-110 cl4"></span>
 		</div>
 	</div>
 
 
 	<!-- Product Detail -->
-	<section class="sec-product-detail bg0 p-t-40 p-b-45">
+	<section class="sec-product-detail bg0 m-t-60 p-b-45">
 		<div class="container">
 			<div class="row">
-				<!-- 地點、概述、方案選擇、商品評論(top5?)、商品說明、 -->
-				<!-- <div class="col-md-8">
-					<h3 class="mtext-111 cl5 font-weight-bold p-b-10">
-						Xpark都會型水生公園
-					</h3>
-				</div> -->
-
-
-
-				<div class="col-md-8 col-lg-8 p-b-30">
-					<div class="p-l-25 p-r-30 p-lr-0-lg">
-
-						<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-							<ol class="carousel-indicators">
-								<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-								<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-								<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-								<li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-								<li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-								<li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-							</ol>
-							<div class="carousel-inner">
-								<div class="carousel-item active">
-									<img th:src="@{/images/tickets/Xpark_1.jpg}" class="d-block w-100" alt="...">
-								</div>
-								<div class="carousel-item">
-									<img th:src="@{/images/tickets/Xpark_2.jpg}" class="d-block w-100" alt="...">
-								</div>
-								<div class="carousel-item">
-									<img th:src="@{/images/tickets/Xpark_3.jpg}" class="d-block w-100" alt="...">
-								</div>
-								<div class="carousel-item">
-									<img th:src="@{/images/tickets/Xpark_4.jpg}" class="d-block w-100" alt="...">
-								</div>
-								<div class="carousel-item">
-									<img th:src="@{/images/tickets/Xpark_5.jpg}" class="d-block w-100" alt="...">
-								</div>
-								<div class="carousel-item">
-									<img th:src="@{/images/tickets/Xpark_6.jpg}" class="d-block w-100" alt="...">
-								</div>
-							</div>
-							<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
-								data-slide="prev">
-								<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-								<span class="sr-only">Previous</span>
-							</a>
-							<a class="carousel-control-next" href="#carouselExampleIndicators" role="button"
-								data-slide="next">
-								<span class="carousel-control-next-icon" aria-hidden="true"></span>
-								<span class="sr-only">Next</span>
-							</a>
-						</div>
-						<div class="m-t-20 " data-ride="carousel">
-							<button data-slide-to="0" class="active">
-								<img class="p-r-8 m-b-10" style="height: 80px;" th:src="@{/images/tickets/Xpark_1.jpg}" alt="...">
-							</button>
-							<img class="p-r-8 m-b-10" style="height: 80px;" th:src="@{/images/tickets/Xpark_2.jpg}" alt="...">
-							<img class="p-r-8 m-b-10" style="height: 80px;" th:src="@{/images/tickets/Xpark_3.jpg}" alt="...">
-							<img class="p-r-8 m-b-10" style="height: 80px;" th:src="@{/images/tickets/Xpark_4.jpg}" alt="...">
-							<img class="p-r-8 m-b-10" style="height: 80px;" th:src="@{/images/tickets/Xpark_5.jpg}" alt="...">
-							<img class="m-b-10" style="height: 80px;" th:src="@{/images/tickets/Xpark_6.jpg}" alt="...">
-
-						</div>
-
+				<div class="col-md-4 m-t-45">
+					<div class="p-l-25 p-r-25 p-lr-0-lg">
+						<img th:src="@{${option.carModel.image}}" class="d-block w-100" alt="...">
 					</div>
 				</div>
 
-				<div class="col-md-4 p-b-30">
+				<div class="col-md-4 m-t-45 p-b-30">
 					<div class="p-t-5">
-						<h4 class="ltext-102 font-weight-bold cl2 js-name-detail p-b-14">
-							Xpark都會型水生公園門票
-						</h4>
+						<h4 th:text="${option.carModel.makeCh + ' ' + option.carModel.makeEn + ' ' + option.carModel.model}" class="ltext-102 font-weight-bold cl2 js-name-detail p-b-14"></h4>
 						<div class="p-b-10">
-							<div class="rating-count" th:id="${car.id}" value="carRental">
+							<div class="rating-count" th:id="${option.id}" value="carRental">
 								尚無評論
 							</div>
 							<div class="p-t-20">
 								<i class="fa fa-map-marker" aria-hidden="true"></i>
-								桃園, 青埔
+								<span th:text="${option.carLocation.county + ', ' + option.carLocation.district}"></span>
 							</div>
+							<p th:text="${option.carLocation.county + option.carLocation.district + option.carLocation.address}"></p>
 						</div>
-						<p class="stext-102 cl3 p-t-23">
-							由日本橫濱八景島首度跨海來台桃園開設分館「Xpark」，Xpark 主打新都會型水族館，驅使最先端的科技，營造出環境的溫度、濕度、氣味、聲音，帶您到地球上每個不可思議的角落，受到啟發、感受療癒、洗滌心靈。
-						</p>
-
-						<p class="mtext-106 cl2 p-t-30">
-							TWD $450
-						</p>
-						<!--  -->
-						<div class=" p-t-33">
-						
+					</div>
+				</div>
+				<div class="col-md-4 p-b-30">
+					<div class="card">
+						<div class="card-body">
+							<del><span class="cl3" th:text="'TWD $' + ${option.price}"></span></del>
+							<span class="clblack mtext-109" th:text="'TWD $' + ${option.priceSale}"></span>
+						</div>
+						<div class="card-body p-t-33">
 							<div class="row m-b-10">
 								<div class="col-3">
 									<p class="d-flex justify-content-center p-t-8">
@@ -142,7 +80,7 @@
 							<div class="row p-b-10">
 								<div class="col-3">
 									<p class="dis-inline-block align-middle p-t-20 d-flex justify-content-center">
-										人數
+										數量
 									</p>
 								</div>
 								<div class="col-9 ">
@@ -158,15 +96,100 @@
 
 								</div>
 							</div>
-							<button	class="flex-c-m stext-101 cl0 size-101 w-full bg1 bor1 hov-btn1 m-t-20 p-lr-15 trans-04 js-addcart-detail">
+							<button	class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 m-t-20 p-lr-15 trans-04 js-addcart-detail">
 								加入購物車
 							</button>
 						</div>
 					</div>
 				</div>
 			</div>
+			
+			
+			<div class="row">
+				<div class="col-sm-10 col-md-8">
+					<div class="p-b-30 m-lr-15-sm">
+										<!-- Review -->
+						<div class="flex-w flex-t p-b-68">
+							<div class="wrap-pic-s size-109 bor0 of-hidden m-r-18 m-t-6">
+								<img src="images/avatar-01.jpg" alt="AVATAR">
+							</div>
 
-			<div id="map" style="width:100%; height: 500px;"></div>
+							<div class="size-207">
+								<div class="flex-w flex-sb-m p-b-17">
+									<span class="mtext-107 cl2 p-r-20">
+										Ariana Grande
+									</span>
+									<span class="fs-18 cl11">
+										<i class="zmdi zmdi-star"></i>
+										<i class="zmdi zmdi-star"></i>
+										<i class="zmdi zmdi-star"></i>
+										<i class="zmdi zmdi-star"></i>
+										<i class="zmdi zmdi-star-half"></i>
+									</span>
+								</div>
+
+								<p class="stext-102 cl6">
+									Quod autem in homine praestantissimum atque optimum est, id
+									deseruit. Apud ceteros autem philosophos
+								</p>
+							</div>
+						</div>
+
+						<!-- Add review -->
+						<form class="w-full">
+							<h5 class="mtext-108 cl2 p-b-7">
+								Add a review
+							</h5>
+							<p class="stext-102 cl6">
+								Your email address will not be published. Required fields are marked *
+							</p>
+
+							<div class="flex-w flex-m p-t-50 p-b-23">
+								<span class="stext-102 cl3 m-r-16">
+									Your Rating
+								</span>
+
+								<span class="wrap-rating fs-18 cl11 pointer">
+									<i class="item-rating pointer zmdi zmdi-star-outline"></i>
+									<i class="item-rating pointer zmdi zmdi-star-outline"></i>
+									<i class="item-rating pointer zmdi zmdi-star-outline"></i>
+									<i class="item-rating pointer zmdi zmdi-star-outline"></i>
+									<i class="item-rating pointer zmdi zmdi-star-outline"></i>
+									<input class="dis-none" type="number" name="rating">
+								</span>
+							</div>
+							<div class="row p-b-25">
+								<div class="col-12 p-b-5">
+									<label class="stext-102 cl3" for="review">Your review</label>
+									<textarea class="size-110 bor8 stext-102 cl2 p-lr-20 p-tb-10" id="review" name="review"></textarea>
+								</div>
+
+								<div class="col-sm-6 p-b-5">
+									<label class="stext-102 cl3" for="name">Name</label>
+									<input class="size-111 bor8 stext-102 cl2 p-lr-20" id="name" type="text" name="name">
+								</div>
+
+								<div class="col-sm-6 p-b-5">
+									<label class="stext-102 cl3" for="email">Email</label>
+									<input class="size-111 bor8 stext-102 cl2 p-lr-20" id="email" type="text" name="email">
+								</div>
+							</div>
+
+							<button class="flex-c-m stext-101 cl0 size-112 bg7 bor11 hov-btn3 p-lr-15 trans-04 m-b-10">
+								Submit
+							</button>
+						</form>
+					</div>
+				</div>
+			</div>
+			
+			<div class="row">
+				<div class="col-sm-10 col-md-8">
+					<h3>租車地點</h3>
+					<div id="map" style="width:100%; height: 500px;"></div>
+				</div>
+			</div>
+			
 
 			<div class="bor10 m-t-50 p-t-43 p-b-40">
 				<!-- Tab01 -->
