--- a/src/main/resources/templates/frontend/index.html
+++ b/src/main/resources/templates/frontend/index.html
@@ -1236,6 +1236,8 @@
 	<div th:replace="frontend/partials/fragment :: toTop"></div>
 	<!-- Modal1 -->
 	<div th:replace="frontend/partials/fragment :: modal1"></div>
+<!-- 	<!-- loginModal --> -->
+<!-- 	<div th:replace="frontend/login :: loginModal"></div> -->
 	<!-- javascript -->
 	<div th:replace="frontend/partials/fragment :: script"></div>
 	<script>
