--- a/src/main/resources/templates/frontend/login.html
+++ b/src/main/resources/templates/frontend/login.html
@@ -1,107 +1,115 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Skydash Admin</title>
-  <!-- plugins:css -->
-  <link rel="stylesheet" href="../../vendors/feather/feather.css">
-  <link rel="stylesheet" href="../../vendors/ti-icons/css/themify-icons.css">
-  <link rel="stylesheet" href="../../vendors/css/vendor.bundle.base.css">
-  <!-- endinject -->
-  <!-- Plugin css for this page -->
-  <!-- End plugin css for this page -->
-  <!-- inject:css -->
-  <link rel="stylesheet" href="../../css/vertical-layout-light/style.css">
-  <!-- endinject -->
-  <link rel="shortcut icon" href="../../images/favicon.png" />
-</head>
+    <!-- Head -->
+    <head>
+        <title>立即登入GoTrip！</title>
+        <!-- Meta-Tags -->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="keywords" content="Existing Login Form Widget Responsive, Login Form Web Template, Flat Pricing Tables, Flat Drop-Downs, Sign-Up Web Templates, Flat Web Templates, Login Sign-up Responsive Web Template, Smartphone Compatible Web Template, Free Web Designs for Nokia, Samsung, LG, Sony Ericsson, Motorola Web Design">
+        <script type="application/x-javascript">addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); }</script>
+        <!-- //Meta-Tags -->
+        <link th:href="@{css/loginCSS/popuo-box.css}" rel="stylesheet" type="text/css" media="all" />
+        <!-- Style -->
+        <link rel="stylesheet" th:href="@{css/loginCSS/style.css}" type="text/css" media="all">
+    </head>
+    <!-- //Head -->
 
-<body>
-      <main>
-        <h1>會員登入</h1>
-        <form id=loginForm method="POST" th:action="@{/login}" th:Object="${userAccount}" enctype="multipart/form-data" autocomplete="off">
-        	<input type="hidden" id="MESSAGE" th:value="${MESSAGE}"/>
-            <section class="form-input">
-                <label>帳號/Email</label>
-                <div class="input-area">
-                    <div class="input-img"><img th:src="@{/images/userAccount/person.png}"></div>
-                    <input type="text" th:field="*{email}" placeholder="請輸入您的Email"/>
+    <!-- Body -->
+    <body><h1>立即登入GoTrip！</h1>
+        <div class="w3layoutscontaineragileits">
+            <h2>Login here</h2>
+            <form id=loginForm method="POST" th:action="@{/login}" th:Object="${userAccount}" enctype="multipart/form-data" autocomplete="off">
+    		<input type="hidden" id="MESSAGE" th:value="${MESSAGE}"/>
+                <input type="email" Name="email" placeholder="EMAIL" required>
+                <input type="password" Name="password" placeholder="PASSWORD" required>
+                <ul class="agileinfotickwthree">
+                    <li><input type="checkbox" id="brand1" value="">
+                        <label for="brand1">
+                            <span></span>Remember me</label>
+                            <a href="#">Forgot password?</a>
+                    </li>
+                </ul>
+                <div class="aitssendbuttonw3ls">
+                    <input type="submit" value="登入">
+                    <p>還沒有GoTrip會員？<span>→</span><a class="w3_play_icon1" href="#small-dialog1">點我加入！</a></p>
+                    <div class="clear"></div>
                 </div>
-            </section>
-            <section class="form-input">
-                <label>密碼</label>
-                <div class="input-area">
-                    <div class="input-img"><img th:src="@{/images/userAccount/lock.png}"></div>
-                    <input type="password" th:field="*{password}" maxlength="16" placeholder="請輸入您的密碼"/>
+            </form>
+        </div>
+        
+        <!-- for register popup -->
+        <div id="small-dialog1" class="mfp-hide">
+            <div class="contact-form1">
+                <div class="contact-w3-agileits">
+                    <h3>Register Form</h3>
+                    <form id="registerForm" method="POST" th:action="@{/register}" th:Object="${userAccountVO}" enctype="multipart/form-data" autocomplete="off">
+                        <div class="form-sub-w3ls">
+                            <input placeholder="User Name"  type="text" name="ch_name" required>
+                            <div class="icon-agile">
+                                <i class="fa fa-user" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                        <div class="form-sub-w3ls">
+                            <input placeholder="Email" class="mail" type="email" name="email"　required>
+                            <div class="icon-agile">
+                                <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                        <div class="form-sub-w3ls">
+                            <input placeholder="Password"  type="password" name="password" required>
+                            <div class="icon-agile">
+                                <i class="fa fa-unlock-alt" aria-hidden="true"></i>
+                            </div>
+                        </div>
+<!--                         <div class="form-sub-w3ls"> -->
+<!--                             <input placeholder="Confirm Password"  type="password" name="password" required> -->
+<!--                             <div class="icon-agile"> -->
+<!--                                 <i class="fa fa-unlock-alt" aria-hidden="true"></i> -->
+<!--                             </div> -->
+<!--                         </div> -->
+                        <div class="login-check">
+                            <label class="checkbox"><input type="checkbox" name="checkbox" checked="">I Accept Terms & Conditions</label>
+                        </div>
+                        <div class="submit-w3l">
+                            <input type="submit" value="註冊">
+                        </div>
+                    </form>
                 </div>
-            </section>
-            <button>登入</button>
-            <span>還不是會員嗎?<a th:href="@{/register}">立即加入</a></span>
-        </form>
-    </main>
-  <!-- container-scroller -->
-  <!-- plugins:js -->
-  <script src="../../vendors/js/vendor.bundle.base.js"></script>
-<!--   <script src="/lib/jquery.min.js"></script> -->
-<!--   <script src="/lib/jquery.plugin.js"></script> -->
-  <!-- endinject -->
-  <!-- Plugin js for this page -->
-  <!-- End plugin js for this page -->
-  <!-- inject:js -->
-  <script th:src="@{/js/jquery-3.6.0.js}"></script>
-  <script th:src="@{/js/off-canvas.js}"></script>
-  <script th:src="@{/js/hoverable-collapse.js}"></script>
-  <script th:src="@{/js/template.js}"></script>
-  <script th:src="@{/js/settings.js}"></script>
-  <script th:src="@{/js/todolist.js}"></script>
-  <script th:src="@{/js/loginJS/lib/jquery-3.4.1.js}"></script>
-  <script th:src="@{/js/loginJS/common.js}"></script>
-  <script th:src="@{/js/loginJS/validation.js}"></script>
-  <script th:src="@{/js/loginJS/login.js}"></script>
-  <!-- endinject -->
-</body>
-
-
-
-
-
-
-<!-- <head> -->
-<!--     <meta charset="UTF-8"> -->
-<!--     <meta name="viewport" content="width=device-width, initial-scale=1"> -->
-<!--     <title>會員登入</title> -->
-<!--     <head th:insert="load/css :: css"></head> -->
-<!--     <link rel="stylesheet" th:href="@{/css/login.css}"> -->
-<!-- </head> -->
-<!-- <body> -->
-<!--     <main> -->
-<!--         <h1>會員登入</h1> -->
-<!--         <form id=loginForm method="POST" th:action="@{/login}" th:Object="${userAccount}" enctype="multipart/form-data" autocomplete="off"> -->
-<!--         	<input type="hidden" id="MESSAGE" th:value="${MESSAGE}"/> -->
-<!--             <section class="form-input"> -->
-<!--                 <label>帳號/Email</label> -->
-<!--                 <div class="input-area"> -->
-<!--                     <div class="input-img"><img th:src="@{/images/userAccount/person.png}"></div> -->
-<!--                     <input type="text" th:field="*{email}" placeholder="請輸入您的Email"/> -->
-<!--                 </div> -->
-<!--             </section> -->
-<!--             <section class="form-input"> -->
-<!--                 <label>密碼</label> -->
-<!--                 <div class="input-area"> -->
-<!--                     <div class="input-img"><img th:src="@{/images/userAccount/lock.png}"></div> -->
-<!--                     <input type="password" th:field="*{password}" maxlength="16" placeholder="請輸入您的密碼"/> -->
-<!--                 </div> -->
-<!--             </section> -->
-<!--             <button>登入</button> -->
-<!--             <span>還不是會員嗎?<a th:href="@{/register}">立即加入</a></span> -->
-<!--         </form> -->
-<!--     </main> -->
-
-<!--     <script th:replace="load/js :: js"></script> -->
-<!--     <script th:src="@{/js/login.js}"></script> -->
-<!-- </body> -->
-
-</html>
+            </div>
+        </div>
+        <!-- //for register popup -->
+        
+        <div class="w3footeragile">
+            <p>&copy; 2017 Existing Login Form. All Rights Reserved | Design by 
+                <a href="http://www.bootstrapmb.com" >bootstrapmb.com</a>
+            </p>
+        </div>
+        
+        <script type="text/javascript" th:src="@{/js/loginJS/lib/jquery-2.1.4.min.js}"></script>
+        <!-- pop-up-box-js-file -->
+        <script th:src="@{/js/loginJS/lib/jquery.magnific-popup.js}" type="text/javascript"></script>
+        <!--//pop-up-box-js-file -->
+        <script>
+        $(document).ready(function() {		
+            $('.w3_play_icon,.w3_play_icon1,.w3_play_icon2').magnificPopup({			
+                type: 'inline',			
+                fixedContentPos: false,			
+                fixedBgPos: true,			
+                overflowY: 'auto',			
+                closeBtnInside: true,			
+                preloader: false,			
+                midClick: true,			
+                removalDelay: 300,			
+                mainClass: 'my-mfp-zoom-in'		
+                
+                });																				
+            });
+        </script>
+        
+    </body>
+    
+    <!-- //Body -->
+    
+    </html>
