--- a/src/main/resources/templates/frontend/partials/fragment.html
+++ b/src/main/resources/templates/frontend/partials/fragment.html
@@ -84,6 +84,10 @@
                     <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 js-show-modal-search">
                         <i class="zmdi zmdi-search"></i>
                     </div>
+                    <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart"
+                         data-notify="2">
+                        <i class="zmdi zmdi-shopping-cart"></i>
+                    </div>
 						<a href="#"
 							class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
 							data-notify="0">
@@ -92,8 +96,11 @@
 						<a th:href="@{/backend/index}" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
 							data-notify="0">
 							<i class="zmdi zmdi-account"></i></a>
+<!-- 						<a th:href="@{/login}" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" -->
+<!-- 							data-notify="0"> -->
+<!-- 							<i class="zmdi zmdi-account"></i></a> -->
 <!-- 						<a data-toggle="modal" data-target="#logModal"  -->
-<!-- 						    class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti eBtn" -->
+<!-- 						    class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti eBtn js-show-loginModal" -->
 <!-- 							data-notify="0"> -->
 <!-- 							<i class="zmdi zmdi-account"></i> -->
 <!-- 						</a> -->
@@ -101,48 +108,7 @@
 				</nav>
 			</div>
 		</div>
-                    <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart"
-                         data-notify="2">
-                        <i class="zmdi zmdi-shopping-cart"></i>
-                    </div>
-                    <a href="#"
-                       class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
-                       data-notify="0">
-                        <i class="zmdi zmdi-favorite-outline"></i>
-                    </a>
-                    <!-- 						<a th:href="@{/login}" -->
-                    <a th:href="@{/backend/index}"
-                       class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
-                       data-notify="0">
-                        <i class="zmdi zmdi-account"></i>
-                    </a>
-                </div>
-            </nav>
-        </div>
-    </div>
 
-<<<<<<< HEAD
-			<!-- Icon header -->
-<!-- 			<div class="wrap-icon-header flex-w flex-r-m m-r-15"> -->
-<!-- 				<div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 js-show-modal-search"> -->
-<!-- 					<i class="zmdi zmdi-search"></i> -->
-<!-- 				</div> -->
-
-<!-- 				<div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti js-show-cart" -->
-<!-- 					data-notify="2"> -->
-<!-- 					<i class="zmdi zmdi-shopping-cart"></i> -->
-<!-- 				</div> -->
-
-<!-- 				<a href="#" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti" -->
-<!-- 					data-notify="0"> -->
-<!-- 					<i class="zmdi zmdi-favorite-outline"></i> -->
-<!-- 				</a> -->
-<!-- 				<a th:href="@{/backend/index}" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" -->
-<!-- 					data-notify="0"> -->
-<!-- 					<i class="zmdi zmdi-account"></i> -->
-<!-- 				</a> -->
-<!-- 			</div> -->
-=======
     <!-- Header Mobile -->
     <div class="wrap-header-mobile">
         <!-- Logo moblie -->
@@ -160,7 +126,6 @@
                  data-notify="2">
                 <i class="zmdi zmdi-shopping-cart"></i>
             </div>
->>>>>>> 942b588db6e9d1d5641297bc7784cf20492af007
 
             <a href="#" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti"
                data-notify="0">
@@ -309,7 +274,6 @@
                         View Cart
                     </a>
 
-<<<<<<< HEAD
 						<a href="shoping-cart.html"
 							class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-b-10">
 							Check Out
@@ -383,17 +347,14 @@
 				<div class="mtext-102 cl2 p-b-15">
 					Sort By
 				</div>
-=======
                     <a href="shoping-cart.html"
                        class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-b-10">
                         Check Out
                     </a>
                 </div>
             </div>
-        </div>
-    </div>
-</div>
->>>>>>> 942b588db6e9d1d5641297bc7784cf20492af007
+   </div>
+
 
 
 <div th:fragment="search" class="dis-none panel-search w-full p-t-10 p-b-15">
@@ -799,7 +760,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>s
                 </div>
 
                 <div class="col-md-6 col-lg-5 p-b-30">
@@ -937,42 +898,30 @@
     <script th:src="@{/js/rating.js}" src=""></script>
 </div>
 
-<<<<<<< HEAD
-								<a href="#" class="fs-14 cl3 hov-cl1 trans-04 lh-10 p-lr-5 p-tb-2 m-r-8 tooltip100"
-									data-tooltip="Google Plus">
-									<i class="fa fa-google-plus"></i>
-								</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+
 	
-	<div th:fragment="script">
-		<script th:src="@{/vendors/jquery/jquery-3.2.1.min.js}" src="vendors/jquery/jquery-3.2.1.min.js"></script>
-		<script th:src="@{/vendors/animsition/js/animsition.min.js}" src="vendors/animsition/js/animsition.min.js"></script>
-		<script th:src="@{/vendors/bootstrap/js/popper.js}" src="vendors/bootstrap/js/popper.js"></script>
-		<script th:src="@{/vendors/bootstrap/js/bootstrap.min.js}" src="vendors/bootstrap/js/bootstrap.min.js"></script>
-		<script th:src="@{/vendors/select2/select2.min.js}" src="vendors/select2/select2.min.js"></script>
-		<script th:src="@{/vendors/daterangepicker/moment.min.js}" src="vendors/daterangepicker/moment.min.js"></script>
-		<script th:src="@{/vendors/daterangepicker/daterangepicker.js}" src="vendors/daterangepicker/daterangepicker.js"></script>
-		<script th:src="@{/vendors/slick/slick.min.js}" src="vendors/slick/slick.min.js"></script>
-		<script th:src="@{/js/slick-custom.js}" src="js/slick-custom.js"></script>
-		<script th:src="@{/vendors/parallax100/parallax100.js}" src="vendor/parallax100/parallax100.js"></script>
-		<script th:src="@{/vendors/MagnificPopup/jquery.magnific-popup.min.js}" src="vendors/MagnificPopup/jquery.magnific-popup.min.js"></script>
-		<script th:src="@{/vendors/isotope/isotope.pkgd.min.js}" src="vendors/isotope/isotope.pkgd.min.js"></script>
-		<script th:src="@{/vendors/sweetalert/sweetalert.min.js}" src="vendors/sweetalert/sweetalert.min.js"></script>
-		<script th:src="@{/vendors/perfect-scrollbar/perfect-scrollbar.min.js}" src="vendors/perfect-scrollbar/perfect-scrollbar.min.js"></script>
-		<script th:src="@{/js/main.js}" src="js/main.js"></script>
-		<script th:src="@{/js/frontend.js}" src="js/frontend.js"></script>
-		<script th:src="@{/js/rating.js}" src=""></script>
+<!-- 	<div th:fragment="script"> -->
+<!-- 		<script th:src="@{/vendors/jquery/jquery-3.2.1.min.js}" src="vendors/jquery/jquery-3.2.1.min.js"></script> -->
+<!-- 		<script th:src="@{/vendors/animsition/js/animsition.min.js}" src="vendors/animsition/js/animsition.min.js"></script> -->
+<!-- 		<script th:src="@{/vendors/bootstrap/js/popper.js}" src="vendors/bootstrap/js/popper.js"></script> -->
+<!-- 		<script th:src="@{/vendors/bootstrap/js/bootstrap.min.js}" src="vendors/bootstrap/js/bootstrap.min.js"></script> -->
+<!-- 		<script th:src="@{/vendors/select2/select2.min.js}" src="vendors/select2/select2.min.js"></script> -->
+<!-- 		<script th:src="@{/vendors/daterangepicker/moment.min.js}" src="vendors/daterangepicker/moment.min.js"></script> -->
+<!-- 		<script th:src="@{/vendors/daterangepicker/daterangepicker.js}" src="vendors/daterangepicker/daterangepicker.js"></script> -->
+<!-- 		<script th:src="@{/vendors/slick/slick.min.js}" src="vendors/slick/slick.min.js"></script> -->
+<!-- 		<script th:src="@{/js/slick-custom.js}" src="js/slick-custom.js"></script> -->
+<!-- 		<script th:src="@{/vendors/parallax100/parallax100.js}" src="vendor/parallax100/parallax100.js"></script> -->
+<!-- 		<script th:src="@{/vendors/MagnificPopup/jquery.magnific-popup.min.js}" src="vendors/MagnificPopup/jquery.magnific-popup.min.js"></script> -->
+<!-- 		<script th:src="@{/vendors/isotope/isotope.pkgd.min.js}" src="vendors/isotope/isotope.pkgd.min.js"></script> -->
+<!-- 		<script th:src="@{/vendors/sweetalert/sweetalert.min.js}" src="vendors/sweetalert/sweetalert.min.js"></script> -->
+<!-- 		<script th:src="@{/vendors/perfect-scrollbar/perfect-scrollbar.min.js}" src="vendors/perfect-scrollbar/perfect-scrollbar.min.js"></script> -->
+<!-- 		<script th:src="@{/js/main.js}" src="js/main.js"></script> -->
+<!-- 		<script th:src="@{/js/frontend.js}" src="js/frontend.js"></script> -->
+<!-- 		<script th:src="@{/js/rating.js}" src=""></script> -->
+
 <!-- 		<script th:src="@{https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js}"></script> -->
-	</div>
-	
-=======
->>>>>>> 942b588db6e9d1d5641297bc7784cf20492af007
+<!-- 	</div> -->
+
 </body>
 
 </html>
